# podsblitz

./: .gitignore  README  meson.build  notes  run.sh
data/: de.hannenz.podsblitz.appdata.xml.in  de.hannenz.podsblitz.desktop.in  de.hannenz.podsblitz.gresource.xml  de.hannenz.podsblitz.gschema.xml  gschemas.compiled  meson.build  podsblitz.db
data/styles/: global.css
po/: POTFILES  de.hannenz.podsblitz.pot  de.po
src/: Application.vala  Database.vala  Episode.vala  PodsblitzApplication.vala  Subscription.vala  Utility.vala  main.vala  meson.build
src/widgets/: AddSubscriptionDialog.vala  CellRendererDate.vala  CoverView.vala  EpisodeItem.vala  HeaderBar.vala  ListView.vala  MainWindow.vala  Player.vala  SubscriptionDetailHeader.vala
