sources = files(
    'main.vala',
	'Application.vala',
	'Database.vala',
	'Utility.vala',
	'Subscription.vala',
	'Episode.vala',
    'widgets/MainWindow.vala',
    'widgets/HeaderBar.vala',
    'widgets/AddSubscriptionDialog.vala',
    'widgets/CellRendererDate.vala',
	'widgets/CoverView.vala',
	'widgets/ListView.vala'
)
